# coap-lite

./: CHANGELOG.md  Cargo.toml  LICENSE-3RD-PARTY  LICENSE-MIT  README.md  cliff.toml  error.rs  header.rs  mod.rs  packet.rs
examples/: bytes.rs  client.rs  server.rs  server_coaphandler.rs
src/: block_handler.rs  block_value.rs  error.rs  header.rs  impl_coap_message.rs  impl_coap_message_0_3.rs  lib.rs  link_format.rs  log.rs  observe.rs  option_value.rs  packet.rs  request.rs  response.rs
src/block_handler/: block_value.rs  mod.rs
