[package]
name = "coap-lite"
description = """
A lightweight CoAP message manipulation crate, ideal for embedded environments.
"""
version = "0.8.1"
authors = ["Martin Disch <martindisch@gmail.com>"]
repository = "https://github.com/martindisch/coap-lite"
readme = "README.md"
keywords = ["coap"]
categories = ["network-programming", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
coap-message = { version = "^0.2.0-alpha.0", optional = true }
log = { version = "0.4.14", default-features = false, optional = true }
lru_time_cache = "0.11.11"

# actually they are dev-dependencies, but those can't be optional
coap-handler = { version = "^0.1.0-alpha.0", optional = true }

[features]
default = ["std"]
std = []
with-coap-message = ["coap-message"]

example-server_coaphandler = ["with-coap-message", "coap-handler"]

[badges]
maintenance = { status = "passively-maintained" }

[[example]]
name = "server_coaphandler"
required-features = ["example-server_coaphandler"]
